--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./app.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
     "cookie-parser": "~1.4.3",
     "express": "~4.16.0",
     "http": "0.0.0",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node": "^11.12.0"
   }
